[gd_scene load_steps=13 format=3 uid="uid://c8we5xh6j8dc7"]

[ext_resource type="Script" path="res://scenes/scripts/level_1.gd" id="1_y5oao"]
[ext_resource type="PackedScene" uid="uid://d0qn4n25hjihd" path="res://LevelBlocks/box.tscn" id="2_408v8"]
[ext_resource type="PackedScene" uid="uid://blw54ox33juq" path="res://LevelBlocks/coin.tscn" id="3_l16fi"]
[ext_resource type="PackedScene" uid="uid://5d0myasppyb8" path="res://LevelBlocks/gravity.tscn" id="4_5jwiw"]
[ext_resource type="PackedScene" uid="uid://d2o56q43c2fa7" path="res://LevelBlocks/skull.tscn" id="4_igqhe"]
[ext_resource type="PackedScene" uid="uid://ds25ca0fs84f" path="res://LevelBlocks/platform.tscn" id="5_8o2sf"]
[ext_resource type="Shader" path="res://shaders/TV.gdshader" id="5_nv8p6"]
[ext_resource type="PackedScene" uid="uid://dg8yhobkc2qwa" path="res://PlayerModel/player.tscn" id="6_tqfos"]
[ext_resource type="PackedScene" uid="uid://ocryeli0i7dx" path="res://LevelBlocks/floor.tscn" id="6_vcof6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vuvf0"]
shader = ExtResource("5_nv8p6")
shader_parameter/vertJerkOpt = 0.2
shader_parameter/vertMovementOpt = 0.0
shader_parameter/bottomStaticOpt = 0.0
shader_parameter/bottomStaticStrenth = 0.7
shader_parameter/scalinesOpt = 0.8
shader_parameter/rgbOffsetOpt = 0.2
shader_parameter/horzFuzzOpt = 0.15

[sub_resource type="Curve2D" id="Curve2D_ob63d"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1142, 540, 0, 0, 0, 0, 1142, 540, 0, 0, 0, 0, 1155.99, 16, 0, 0, 0, 0, 1142, 540)
}
point_count = 4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b2m7l"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_y5oao")
box_scene = ExtResource("2_408v8")
coin_scene = ExtResource("3_l16fi")
skull_scene = ExtResource("4_igqhe")
platform_scene = ExtResource("5_8o2sf")

[node name="Background" type="CanvasGroup" parent="."]
material = SubResource("ShaderMaterial_vuvf0")

[node name="Floor" parent="Background" instance=ExtResource("6_vcof6")]
visible = false
position = Vector2(-3, 559)

[node name="Roof" parent="Background" instance=ExtResource("6_vcof6")]
visible = false
position = Vector2(-3, 0)
velocity_change = 100
metadata/_edit_lock_ = true

[node name="top" type="ColorRect" parent="Background"]
offset_left = -20.0
offset_top = -12.0
offset_right = 1179.0
offset_bottom = 562.0
color = Color(0.024357, 1.75888e-05, 0.123784, 1)
metadata/_edit_lock_ = true

[node name="bottom" type="ColorRect" parent="Background"]
offset_left = -8.0
offset_top = 562.0
offset_right = 1170.0
offset_bottom = 670.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="floor" type="ColorRect" parent="Background"]
offset_left = -13.0
offset_top = 559.0
offset_right = 1152.0
offset_bottom = 562.0
color = Color(0.531574, 0.000203016, 0.53164, 1)
metadata/_edit_lock_ = true

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 1.05
autostart = true

[node name="PlatformTimer" type="Timer" parent="." groups=["box", "lvl_object"]]
wait_time = 5.801
autostart = true

[node name="BoxTimer" type="Timer" parent="."]
wait_time = 1.407
autostart = true

[node name="SkullTimer" type="Timer" parent="."]
wait_time = 3.829
autostart = true

[node name="BoxPath" type="Path2D" parent="."]
position = Vector2(-0.0133095, 0)
scale = Vector2(1.00089, 1)
curve = SubResource("Curve2D_ob63d")

[node name="PathFollow2D" type="PathFollow2D" parent="BoxPath"]
position = Vector2(1142, 540.094)

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(600, 300)
scale = Vector2(60, 35)
shape = SubResource("RectangleShape2D_b2m7l")
action = "jump"

[node name="Player" parent="." instance=ExtResource("6_tqfos")]
position = Vector2(177, 69)
collision_layer = 3
collision_mask = 3

[node name="Gravity" parent="." instance=ExtResource("4_5jwiw")]

[connection signal="timeout" from="CoinTimer" to="." method="_on_coin_timer_timeout"]
[connection signal="timeout" from="PlatformTimer" to="." method="_on_platform_timer_timeout"]
[connection signal="timeout" from="BoxTimer" to="." method="_on_box_timer_timeout"]
[connection signal="timeout" from="SkullTimer" to="." method="_on_skull_timer_timeout"]
[connection signal="sgnl_player_died" from="Player" to="." method="_on_player_sgnl_player_died"]
